DPNG-13754 fixed services view - breaking too long names

--- a/app/ui/app/marketplace/marketplace.scss
+++ b/app/ui/app/marketplace/marketplace.scss
@@ -85,6 +85,10 @@
           font-size: 24px;
           margin-top: 0;
           padding: 20px 5px 0 8px;
+          max-height: 3em;
+          overflow: hidden;
+          text-overflow: ellipsis;
+          white-space: nowrap;
         }
 
         .description {
@@ -92,6 +96,7 @@
           padding-left: 10px;
           height: 60px;
           overflow: hidden;
+          text-overflow: ellipsis;
         }
 
         a.details {
